# id-trials

./: Makefile  README.md  docker-compose.yml  go.mod  go.sum  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: tag.yml  test_backend.yml
api/: index.go
api/analytics/: index.py
apps/backend/: .air.toml  Dockerfile  README.md  component.json  go.mod  go.sum  main.go
apps/backend/cmd/: generate.go  http.go  util.go
apps/backend/controller/: analytics_routes.go  build.go  cmd.go  cuid_routes.go  error_handler.go  ksuid_routes.go  nano_routes.go  snow_routes.go  ulid_routes.go  user_iroutes.go  user_routes.go  users_ulid_routes.go  uuid_routes.go
apps/backend/datagen/: cmd.go  generate.go
apps/backend/docs/: docs.go  swagger.json  swagger.yaml
apps/backend/middleware/: capture.go  error.go  logger.go  logging.go
apps/backend/models/: analytics.go  base.go  config.go  cuid_user.go  ksuid_user.go  nanoid_user.go  route_metric.go  routes.go  snow_user.go  statistics.go  ulid_user.go  user_paging.go  uuid_user.go
apps/backend/models/stats/: IdEfficency.go  analytics.go  timeseries.go
apps/backend/repository/: analytics_repo.go  connection.go  cuid_repo.go  init.go  interface.go  ksuid_repo.go  nanoid_repo.go  snow_repo.go  ulid_repo.go  user.go  uuid_repo.go
apps/backend/utils/: stats.go
apps/frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
apps/frontend/src/: App.jsx  App.tsx
configs/scripts/: generate.py  tag.sh
(+76 files in other folders)
