[project]
name = "user-table"
version = "0.1.0"
description = ""
authors = [
    {name = "companydream",email = "tbrantleyii@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)",
    "polars (>=1.37.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
